syntax = "proto3";

package auth;

option go_package = "src/proto";

service AuthService {
  rpc VerifyTicket(VerifyTicketRequest) returns (VerifyTicketResponse){}
  rpc Validate(ValidateRequest) returns (ValidateResponse){}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse){}
}

message Credential{
  string accessToken = 1;
  string refreshToken = 2;
  int32 expiresIn = 3;
}

// Verify

message VerifyTicketRequest{
  string ticket = 1;
}

message VerifyTicketResponse{
  Credential credential = 1;
}

// Validate

message ValidateRequest{
  string token = 1;
}

message ValidateResponse{
  string userId = 1;
  string role = 2;
}

// Redeem Refresh Token

message RefreshTokenRequest{
  string refreshToken = 1;
}

message RefreshTokenResponse{
  Credential credential = 1;
}
